<resources>
    <string name="abc_action_bar_home_description">Navigate home</string>
    <string name="abc_action_bar_up_description">Navigate up</string>
    <string name="abc_action_menu_overflow_description">More options</string>
    <string name="abc_action_mode_done">Done</string>
    <string name="abc_activity_chooser_view_see_all">See all</string>
    <string name="abc_activitychooserview_choose_application">Choose an app</string>
    <string name="abc_capital_off">OFF</string>
    <string name="abc_capital_on">ON</string>
    <string name="abc_menu_alt_shortcut_label">Alt+</string>
    <string name="abc_menu_ctrl_shortcut_label">Ctrl+</string>
    <string name="abc_menu_delete_shortcut_label">delete</string>
    <string name="abc_menu_enter_shortcut_label">enter</string>
    <string name="abc_menu_function_shortcut_label">Function+</string>
    <string name="abc_menu_meta_shortcut_label">Meta+</string>
    <string name="abc_menu_shift_shortcut_label">Shift+</string>
    <string name="abc_menu_space_shortcut_label">space</string>
    <string name="abc_menu_sym_shortcut_label">Sym+</string>
    <string name="abc_prepend_shortcut_label">Menu+</string>
    <string name="abc_search_hint">Search…</string>
    <string name="abc_searchview_description_clear">Clear query</string>
    <string name="abc_searchview_description_query">Search query</string>
    <string name="abc_searchview_description_search">Search</string>
    <string name="abc_searchview_description_submit">Submit query</string>
    <string name="abc_searchview_description_voice">Voice search</string>
    <string name="abc_shareactionprovider_share_with">Share with</string>
    <string name="abc_shareactionprovider_share_with_application">Share with %s</string>
    <string name="abc_toolbar_collapse_description">Collapse</string>
    <string name="acc_label_card_number">Card number</string>
    <string name="acc_label_card_number_node">%s, Card number</string>
    <string name="acc_label_cvc_node">%s, CVC</string>
    <string name="acc_label_expiry_date">Expiration date</string>
    <string name="acc_label_expiry_date_node">%s, Expiration date</string>
    <string name="acc_label_zip">ZIP Code</string>
    <string name="acc_label_zip_short">ZIP</string>
    <string name="acceptdeliveryboy">Accpeted Searching Delivery Boy.</string>
    <string name="add">ADD</string>
    <string name="add_card">Add a new debit or credit card to make purchases in this app.</string>
    <string name="add_description">Add Description</string>
    <string name="add_item">Add item</string>
    <string name="add_money">ADD MONEY</string>
    <string name="add_new_address">ADD NEW ADDRESS</string>
    <string name="add_pickup_drap_details">ADD PICKUP/DRAP DETAILS</string>
    <string name="add_task_details">Add task details</string>
    <string name="add_to_cart">Add To Cart</string>
    <string name="added">Added %s</string>
    <string name="addition_note">Addition note</string>
    <string name="additional_information">Additional Information</string>
    <string name="additional_note">Additional Note</string>
    <string name="address">Address</string>
    <string name="address_city_required">Please enter your city</string>
    <string name="address_country_invalid">Your country is invalid</string>
    <string name="address_county_required">Please enter your county</string>
    <string name="address_label_address">Address</string>
    <string name="address_label_address_line1">Address line 1</string>
    <string name="address_label_address_line1_optional">Address line 1 (optional)</string>
    <string name="address_label_address_line2">Address line 2</string>
    <string name="address_label_address_line2_optional">Address line 2 (optional)</string>
    <string name="address_label_address_optional">Address (optional)</string>
    <string name="address_label_apt">Apt.</string>
    <string name="address_label_apt_optional">Apt. (optional)</string>
    <string name="address_label_city">City</string>
    <string name="address_label_city_optional">City (optional)</string>
    <string name="address_label_country">Country</string>
    <string name="address_label_county">County</string>
    <string name="address_label_county_optional">County (optional)</string>
    <string name="address_label_name">Name</string>
    <string name="address_label_name_optional">Name (optional)</string>
    <string name="address_label_phone_number">Phone number</string>
    <string name="address_label_phone_number_optional">Phone number (optional)</string>
    <string name="address_label_postal_code">Postal code</string>
    <string name="address_label_postal_code_optional">Postal code (optional)</string>
    <string name="address_label_postcode">Postcode</string>
    <string name="address_label_postcode_optional">Postcode (optional)</string>
    <string name="address_label_province">Province</string>
    <string name="address_label_province_optional">Province (optional)</string>
    <string name="address_label_region_generic">State / Province / Region</string>
    <string name="address_label_region_generic_optional">State / Province / Region (optional)</string>
    <string name="address_label_state">State</string>
    <string name="address_label_state_optional">State (optional)</string>
    <string name="address_label_zip_code">ZIP code</string>
    <string name="address_label_zip_code_optional">ZIP code (optional)</string>
    <string name="address_label_zip_postal_code">ZIP/Postal code</string>
    <string name="address_label_zip_postal_code_optional">ZIP / Postal code (optional)</string>
    <string name="address_name_required">Please enter your name</string>
    <string name="address_phone_number_required">Please enter your phone number</string>
    <string name="address_postal_code_invalid">Your postal code is invalid</string>
    <string name="address_postcode_invalid">Your postcode is invalid</string>
    <string name="address_province_required">Please enter your province</string>
    <string name="address_region_generic_required">Please enter your State/Province/Region</string>
    <string name="address_required">Please enter your address</string>
    <string name="address_shipping_address">Shipping Address</string>
    <string name="address_state_required">Please enter your state</string>
    <string name="address_zip_invalid">Your ZIP code is invalid.</string>
    <string name="address_zip_postal_invalid">Your ZIP/Postal code is invalid</string>
    <string name="addtaskdetails">Add task details</string>
    <string name="all_store">All Store</string>
    <string name="almost_there">ALMOST THERE</string>
    <string name="amex_short">Amex</string>
    <string name="androidx_startup">androidx.startup</string>
    <string name="any_time">any time</string>
    <string name="anything_you_">Anything you need, delivered</string>
    <string name="api_key">AIzaSyDjz8dCm4MMlLTACIFkd3B8k0F-roEQjAI</string>
    <string name="app_name">DeliveryKing</string>
    <string name="appbar_scrolling_view_behavior">com.google.android.material.appbar.AppBarLayout$ScrollingViewBehavior</string>
    <string name="apply">Apply</string>
    <string name="applycoupon">Apply Coupon</string>
    <string name="areyou_ordercancel">Are you sure you want to Order Cancel?</string>
    <string name="areyousuredelete">Are you sure you want to delete?</string>
    <string name="availablebalance">Available balance:</string>
    <string name="becs_mandate_acceptance">" By providing your bank account details and confirming this payment, you agree to this Direct Debit Request and the &lt;a href=https://stripe.com/au-becs-dd-service-agreement/legal>Direct Debit Request service agreement&lt;/a>, and authorise Stripe Payments Australia Pty Ltd ACN 160 180 343 Direct Debit User ID number 507156 (“Stripe”) to debit your account through the Bulk Electronic Clearing System (BECS) on behalf of %1$s (the Merchant) for any amounts separately communicated to you by the Merchant. You certify that you are either an account holder or an authorised signatory on the account listed above. "</string>
    <string name="becs_widget_account_number">Account number</string>
    <string name="becs_widget_account_number_incomplete">Your account number is incomplete.</string>
    <string name="becs_widget_account_number_required">Your account number is required.</string>
    <string name="becs_widget_bsb">BSB</string>
    <string name="becs_widget_bsb_incomplete">The BSB you entered is incomplete.</string>
    <string name="becs_widget_bsb_invalid">The BSB you entered is invalid.</string>
    <string name="becs_widget_email">Email Address</string>
    <string name="becs_widget_email_invalid">Your email address is invalid.</string>
    <string name="becs_widget_email_required">Your email address is required.</string>
    <string name="becs_widget_name">Name</string>
    <string name="becs_widget_name_required">Your name is required.</string>
    <string name="bill_details">Bill Details</string>
    <string name="bottom_sheet_behavior">com.google.android.material.bottomsheet.BottomSheetBehavior</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="browse_restaurants">BROWSE RESTAURANTS</string>
    <string name="buy_anything">Buy Anything</string>
    <string name="call">Call</string>
    <string name="cancel">Cancel</string>
    <string name="cancel_order">Cancel Order</string>
    <string name="cancelbyyou">Cancelled By You.</string>
    <string name="cancelledbystore">Cancelled By Store.</string>
    <string name="card_number_hint">1234 1234 1234 1234</string>
    <string name="category">Category</string>
    <string name="change">CHANGE</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="choose_a_delivery">Choose a delivery address</string>
    <string name="choose_language">Choose language</string>
    <string name="congratulations">Congratulations!</string>
    <string name="create_an_account">Create an account</string>
    <string name="don_t_have_an">"Don't have an account?"</string>
    <string name="don_t_have_an_account">"Don't have an account?"</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="eemail">Enter Email</string>
    <string name="email_mobile">Email/Mobile</string>
    <string name="emobile">Enter Mobile</string>
    <string name="ename">Enter Name</string>
    <string name="epassword">Enter Password</string>
    <string name="forgot_password">Forgot Password!</string>
    <string name="home">Home</string>
    <string name="hurrah_you_just_">Hurrah!! You just placed your order successfully.</string>
    <string name="let_s_get_started">"Let's get Started"</string>
    <string name="login">Login</string>
    <string name="login_to_your_exist">Login to your existing account</string>
    <string name="my_order">My Order</string>
    <string name="password">Password</string>
    <string name="pstck_pinpad__num_0">0</string>
    <string name="pstck_pinpad__num_1">1</string>
    <string name="pstck_pinpad__num_2">2</string>
    <string name="pstck_pinpad__num_3">3</string>
    <string name="pstck_pinpad__num_4">4</string>
    <string name="pstck_pinpad__num_5">5</string>
    <string name="pstck_pinpad__num_6">6</string>
    <string name="pstck_pinpad__num_7">7</string>
    <string name="pstck_pinpad__num_8">8</string>
    <string name="pstck_pinpad__num_9">9</string>
    <string name="refer_code">Refer code</string>
    <string name="sign_in">Sign In</string>
    <string name="sign_up">Sign Up</string>
    <string name="update">Update</string>
    <string name="welcome_back">Welcome back!</string>
</resources>