<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <TextView android:textSize="17.0sp" android:gravity="center" android:id="@id/pstck_pinpad__prompt" android:padding="@dimen/pstck_pinpad__default_prompt_padding" android:paddingTop="@dimen/pstck_pinpad__default_prompt_paddingTop" android:paddingBottom="@dimen/pstck_pinpad__default_prompt_paddingBottom" android:layout_width="fill_parent" android:layout_height="wrap_content" />
    <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:id="@id/pstck_pinpad__indicator_layout" android:layout_width="fill_parent" android:layout_height="@dimen/pstck_pinpad__default_indicator_height" />
    <TableLayout android:gravity="center" android:layout_width="fill_parent" android:layout_height="fill_parent" android:stretchColumns="*">
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_1" app:button_text_numeric="@string/pstck_pinpad__num_1" style="@style/Widget.PinPad" />
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_2" app:button_text_alpha="abc" app:button_text_numeric="@string/pstck_pinpad__num_2" style="@style/Widget.PinPad" />
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_3" app:button_text_alpha="def" app:button_text_numeric="@string/pstck_pinpad__num_3" style="@style/Widget.PinPad" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_4" app:button_text_alpha="ghi" app:button_text_numeric="@string/pstck_pinpad__num_4" style="@style/Widget.PinPad" />
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_5" app:button_text_alpha="jkl" app:button_text_numeric="@string/pstck_pinpad__num_5" style="@style/Widget.PinPad" />
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_6" app:button_text_alpha="mno" app:button_text_numeric="@string/pstck_pinpad__num_6" style="@style/Widget.PinPad" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_7" app:button_text_alpha="pqrs" app:button_text_numeric="@string/pstck_pinpad__num_7" style="@style/Widget.PinPad" />
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_8" app:button_text_alpha="tuv" app:button_text_numeric="@string/pstck_pinpad__num_8" style="@style/Widget.PinPad" />
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_9" app:button_text_alpha="wxyz" app:button_text_numeric="@string/pstck_pinpad__num_9" style="@style/Widget.PinPad" />
        </TableRow>
        <TableRow android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_weight="1.0">
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_back" app:button_drawable="@drawable/ps_backspace" style="@style/Widget.PinPad" />
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_0" app:button_text_numeric="@string/pstck_pinpad__num_0" style="@style/Widget.PinPad" />
            <co.paystack.android.design.widget.PinPadButton android:id="@id/pstck_pinpad__btn_done" app:button_text_numeric="Done" style="@style/Widget.PinPad" />
        </TableRow>
    </TableLayout>
</LinearLayout>