<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:gravity="center|top" android:orientation="vertical" android:background="@color/white" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <ScrollView android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center|top" android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip">
            <RelativeLayout android:layout_width="fill_parent" android:layout_height="160.0dip">
                <ImageView android:id="@id/img_back" android:layout_width="30.0dip" android:layout_height="30.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="10.0dip" android:src="@drawable/ic_left_arrow" />
                <ImageView android:layout_width="wrap_content" android:layout_height="140.0dip" android:layout_marginTop="30.0dip" android:src="@drawable/login1" />
            </RelativeLayout>
            <TextView android:textSize="18.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center" android:padding="0.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:text="@string/welcome_back" />
            <TextView android:textSize="12.0dip" android:gravity="center" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="15.0dip" android:layout_marginTop="10.0dip" android:text="@string/login_to_your_exist" />
            <View android:layout_width="fill_parent" android:layout_height="20.0dip" />
            <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip">
                <EditText android:textColor="@color/black" android:id="@id/ed_username" android:background="@drawable/edittext_box" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="42.0dip" android:hint="@string/email_mobile" android:drawableLeft="@drawable/ic_email" android:drawablePadding="5.0dip" android:inputType="text" />
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/edittext_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                    <EditText android:id="@id/ed_password" android:background="@null" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="42.0dip" android:hint="@string/password" android:drawableLeft="@drawable/ic_password" android:drawablePadding="5.0dip" android:layout_weight="1.0" android:inputType="textPassword" />
                    <ImageView android:id="@id/show_pass_btn" android:padding="5.0dip" android:layout_width="40.0dip" android:layout_height="30.0dip" android:layout_marginRight="5.0dip" android:src="@drawable/ic_eye" android:layout_alignParentRight="true" android:layout_centerVertical="true" android:onClick="showHidePass" android:alpha="0.5" />
                </LinearLayout>
                <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
                <TextView android:textSize="14.0sp" android:textStyle="bold" android:textColor="@color/black" android:gravity="center|right" android:id="@id/txt_forgotpassword" android:padding="5.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="5.0dip" android:layout_marginTop="5.0dip" android:text="@string/forgot_password" android:layout_weight="1.0" />
                <LinearLayout android:gravity="center" android:background="@drawable/rounded_button" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="20.0dip" android:elevation="10.0dip">
                    <TextView android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/btn_login" android:layout_width="fill_parent" android:layout_height="48.0dip" android:text="@string/login" />
                </LinearLayout>
                <View android:layout_width="fill_parent" android:layout_height="50.0dip" />
                <LinearLayout android:gravity="center" android:orientation="horizontal" android:layout_width="fill_parent" android:layout_height="wrap_content">
                    <TextView android:textColor="@color/black" android:gravity="center|right" android:layout_width="wrap_content" android:layout_height="48.0dip" android:text="@string/don_t_have_an" />
                    <TextView android:textColor="@color/colorPrimary" android:gravity="center|left" android:id="@id/btn_sign" android:layout_width="wrap_content" android:layout_height="48.0dip" android:layout_marginRight="5.0dip" android:text="@string/sign_up" />
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>