<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:background="@drawable/conground" android:layout_width="fill_parent" android:layout_height="fill_parent"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:orientation="vertical" android:padding="16.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content">
        <View android:layout_width="fill_parent" android:layout_height="32.0dip" />
        <ImageView android:layout_width="wrap_content" android:layout_height="300.0dip" android:src="@drawable/ic_congo" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Headline" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/congratulations" android:textAlignment="center" />
        <TextView android:textAppearance="@style/TextAppearance.AppCompat.Medium" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/hurrah_you_just_" android:textAlignment="center" />
        <View android:layout_width="fill_parent" android:layout_height="42.0dip" />
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content">
            <TextView android:textColor="#ffffffff" android:gravity="center" android:layout_gravity="center" android:id="@id/txt_ordertrack" android:background="@drawable/rounded_button" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/my_order" />
            <View android:layout_width="fill_parent" android:layout_height="32.0dip" />
            <TextView android:textStyle="bold" android:textColor="@color/colorPrimary" android:gravity="center" android:layout_gravity="center" android:id="@id/txt_home" android:background="@drawable/boxborder" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="wrap_content" android:text="@string/home" />
            <View android:layout_width="fill_parent" android:layout_height="32.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>