<?xml version="1.0" encoding="utf-8"?>
<LinearLayout android:orientation="vertical" android:id="@id/lvl1" android:background="@drawable/top_round_shape" android:layout_width="fill_parent" android:layout_height="fill_parent" app:layout_behavior="android.support.design.widget.BottomSheetBehavior"
  xmlns:android="http://schemas.android.com/apk/res/android" xmlns:app="http://schemas.android.com/apk/res-auto">
    <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="fill_parent">
        <LinearLayout android:gravity="center" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip">
            <TextView android:textSize="14.0dip" android:textStyle="bold" android:textColor="@color/black" android:gravity="center|left" android:id="@id/txt_title" android:layout_width="fill_parent" android:layout_height="38.0dip" android:layout_marginLeft="5.0dip" android:layout_marginRight="5.0dip" android:text="@string/edit_profile" android:drawableLeft="@drawable/ic_edit" android:drawablePadding="10.0dip" />
        </LinearLayout>
        <LinearLayout android:orientation="vertical" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginLeft="20.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="20.0dip">
            <EditText android:textSize="14.0dip" android:textColor="@color/black" android:id="@id/ed_name" android:background="@drawable/edittext_box" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="@string/ename" android:drawableLeft="@drawable/ic_user" android:drawablePadding="5.0dip" android:inputType="text" />
            <TextView android:textSize="14.0dip" android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/ed_email" android:background="@drawable/edittext_box" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:layout_marginTop="20.0dip" android:hint="@string/eemail" android:drawableLeft="@drawable/ic_email" android:drawablePadding="5.0dip" android:inputType="text" />
            <LinearLayout android:gravity="center" android:layout_gravity="center" android:orientation="horizontal" android:background="@drawable/edittext_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <View android:layout_width="10.0dip" android:layout_height="2.0dip" />
                <ImageView android:layout_width="wrap_content" android:layout_height="wrap_content" android:src="@drawable/ic_phone" />
                <TextView android:textColor="@color/black" android:gravity="center_vertical" android:id="@id/ed_mobile" android:background="@null" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="@string/emobile" android:inputType="phone" />
            </LinearLayout>
            <LinearLayout android:gravity="center" android:orientation="horizontal" android:background="@drawable/edittext_box" android:layout_width="fill_parent" android:layout_height="wrap_content" android:layout_marginTop="20.0dip">
                <EditText android:textSize="14.0dip" android:id="@id/ed_password" android:background="@null" android:padding="10.0dip" android:layout_width="fill_parent" android:layout_height="50.0dip" android:hint="@string/password" android:drawableLeft="@drawable/ic_password" android:drawablePadding="5.0dip" android:layout_weight="1.0" android:inputType="textPassword" />
                <ImageView android:id="@id/show_pass_btn" android:padding="5.0dip" android:layout_width="40.0dip" android:layout_height="30.0dip" android:src="@drawable/ic_eye" android:onClick="showHidePass" android:alpha="0.5" />
            </LinearLayout>
            <View android:layout_width="fill_parent" android:layout_height="10.0dip" />
            <LinearLayout android:gravity="center" android:background="@drawable/rounded_button" android:layout_width="fill_parent" android:layout_height="42.0dip" android:layout_marginLeft="20.0dip" android:layout_marginTop="30.0dip" android:layout_marginRight="20.0dip" android:elevation="10.0dip">
                <TextView android:textColor="@color/white" android:gravity="center" android:layout_gravity="center" android:id="@id/btn_update" android:layout_width="fill_parent" android:layout_height="42.0dip" android:text="@string/update" />
            </LinearLayout>
            <View android:layout_width="fill_parent" android:layout_height="50.0dip" />
        </LinearLayout>
    </LinearLayout>
</LinearLayout>